--- a/stage-03-projeto03/style.css
+++ b/stage-03-projeto03/style.css
@@ -4,7 +4,11 @@
   box-sizing: border-box;
 }
 
-body, input, button, select, textarea {
+body,
+input,
+button,
+select,
+textarea {
   font-family: "Poppins", sans-serif;
 }
 
@@ -46,7 +50,7 @@ header h1 {
 
 header p {
   font-size: 16px;
-  line-height: 26px; 
+  line-height: 26px;
   color: #42d3ff;
 }
 
@@ -55,7 +59,7 @@ form {
   border-radius: 8px;
   background: #fafafc;
   min-height: 300px;
-  padding: 64px ;
+  padding: 64px;
 }
 
 fieldset {
@@ -74,8 +78,8 @@ fieldset legend {
   font-size: 24px;
   line-height: 34px;
   width: 100%;
-  border-bottom: 1px solid #E6E6F0;
-  padding-bottom: 16px ;
+  border-bottom: 1px solid #e6e6f0;
+  padding-bottom: 16px;
 }
 
 .input-wrapper {
@@ -86,9 +90,9 @@ fieldset legend {
 .input-wrapper label {
   font-size: 14px;
   line-height: 24px;
-  color: #4E4958;
+  color: #4e4958;
   margin-bottom: 8px;
-} 
+}
 
 .input-wrapper label span {
   margin-left: 12px;
@@ -98,18 +102,20 @@ fieldset legend {
 }
 
 .input-wrapper label span:hover {
-  color: #6C6A71
+  color: #6c6a71;
 }
 
-.input-wrapper input, .input-wrapper textarea {
-  background: #FAFAFC;
-  border: 1px solid #E6E6F0;
+.input-wrapper input,
+.input-wrapper textarea, 
+.input-wrapper select {
+  background: #fafafc;
+  border: 1px solid #e6e6f0;
   border-radius: 8px;
   height: 56px;
   padding: 0 24px;
   font-size: 16px;
   line-height: 26px;
-  color: #6C6A71;
+  color: #6c6a71;
 }
 
 .input-wrapper textarea {
@@ -117,4 +123,10 @@ fieldset legend {
   height: 168px;
 }
 
- 
+.input-wrapper select {
+  appearance: none;
+  -webkit-appearance: none;
+  background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round' /%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-position: right 24px top 50%;
+}
