--- a/stage-03-projeto03/style.css
+++ b/stage-03-projeto03/style.css
@@ -59,7 +59,12 @@ form {
   border-radius: 8px;
   background: #fafafc;
   min-height: 300px;
+
   padding: 64px;
+
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
 }
 
 fieldset {
@@ -87,7 +92,8 @@ fieldset legend {
   flex-direction: column;
 }
 
-.input-wrapper label {
+.input-wrapper label,
+.checkbox-wrapper label {
   font-size: 14px;
   line-height: 24px;
   color: #4e4958;
@@ -106,8 +112,10 @@ fieldset legend {
 }
 
 .input-wrapper input,
-.input-wrapper textarea, 
-.input-wrapper select {
+.input-wrapper textarea,
+.input-wrapper select,
+.input-wrapper password,
+.input-wrapper email {
   background: #fafafc;
   border: 1px solid #e6e6f0;
   border-radius: 8px;
@@ -130,3 +138,50 @@ fieldset legend {
   background-repeat: no-repeat;
   background-position: right 24px top 50%;
 }
+
+.col-3 {
+  display: flex;
+  gap: 20px;
+}
+
+.col-3 > div:nth-child(1) {
+  width: 100%;
+}
+
+.checkbox-wrapper {
+  position: relative;
+}
+
+.checkbox-wrapper label {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+  margin: 0;
+}
+
+.checkbox-wrapper input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 24px;
+  height: 24px;
+  opacity: 0;
+}
+
+.checkbox-wrapper label::before {
+  content: "";
+  width: 24px;
+  height: 24px;
+  border: 1px solid #e6e6f0;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.checkbox-wrapper input:checked + label::before {
+  background-image: url("data:image/svg+xml,%3Csvg width='26' height='26' viewBox='0 0 26 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='1' y='1' width='24' height='24' rx='8' fill='%23FAFAFC' stroke='%23E6E6F0'/%3E%3Cpath d='M10 17.17L5.83 13L4.41 14.41L10 20L22 8L20.59 6.59L10 17.17Z' fill='%2342D3FF'/%3E%3C/svg%3E%0A");
+  /* border: 2px solid black; */
+}
+
+.checkbox-wrapper input:focus + label::before {
+  outline: 2px solid black
+} 
