--- a/stage-03-projeto03/style.css
+++ b/stage-03-projeto03/style.css
@@ -56,7 +56,7 @@ header p {
 
 form {
   margin-top: 38px;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
   background: #fafafc;
   min-height: 300px;
 
@@ -183,5 +183,40 @@ fieldset legend {
 }
 
 .checkbox-wrapper input:focus + label::before {
-  outline: 2px solid black
-} 
+  outline: 2px solid black;
+}
+
+footer {
+  background: #f0f0f4;
+  height: 136px;
+  display: flex;
+  flex-direction: column;
+
+  padding: 40px 64px;
+  margin-bottom: 100px;
+
+  border-top: 1px solid #d6d6d6;
+
+  border-radius: 0 0 8px 8px;
+}
+
+footer .button {
+  font-family: "Archivo";
+  height: 56px;
+  background: #04d361;
+  border-radius: 8px;
+  border: none;
+  color: #ffffff;
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 600;
+  cursor: pointer;
+}
+
+footer .button:hover {
+  background: #02bb55
+}
+
+input:invalid {
+  border: 1px solid #ff1010;
+}
