--- a/stage05-projeto08/style.css
+++ b/stage05-projeto08/style.css
@@ -27,7 +27,9 @@ body {
   background: #040924;
 }
 
-body, input, button {
+body,
+input,
+button {
   font-size: 1.6rem;
   line-height: 2rem;
 }
@@ -89,22 +91,21 @@ form input::placeholder {
 
 form button {
   border: none;
-  border-radius: .4rem;
+  border-radius: 0.4rem;
   background: var(--bg-button);
   color: var(--tt-button);
   font-weight: 700;
   cursor: pointer;
   transition: 400ms ease-in-out;
- 
 
   margin-top: 3.2rem;
   padding: 1.6rem;
-  width: 300px; 
+  width: 300px;
 
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: .8rem;
+  gap: 0.8rem;
 }
 
 form button:hover {
@@ -116,12 +117,69 @@ form button:hover {
   width: 100%;
   color: white;
   text-align: center;
-  border-radius: .4rem;
+  border-radius: 0.4rem;
   margin-top: 1.6rem;
-  padding: .6rem;
-
+  padding: 0.6rem;
 }
 
 .hide {
   display: none;
+}
+
+.modal-wrapper.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+.modal-wrapper {
+  position: absolute;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.7);
+  display: grid;
+  place-content: center;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.modal {
+  position: relative;
+}
+
+.modal button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: transform 0.3s;
+  position: absolute;
+  top: 1.6rem;
+  right: 1.6rem;
+}
+
+.modal button:hover {
+  transform: scale(1.2);
+}
+
+.alert-error.open {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
+.alert-error {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background: var(--bg-error);
+  color: var(--tt-error);
+  font-size: 1.6rem;
+  font-family: "Roboto", sans-serif;
+  line-height: 20px;
+  font-weight: 700;
+  text-align: center;
+  padding: .8rem 0;
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-30px);
+  transition: transform .3s;
 }
